# r-image-magic

./: .gitignore  BUSINESS_ANALYSIS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.prebuilt  NOTES_FOR_NEXT_RUN.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: api-build.yml  api-deploy.yml  build.yml  deploy.yml  web-check.yml
DOCS/: ARCHITECTURE.md  TEMPLATES.md
DOCS/plans/: 2026-03-11-fix-templates-db-deploy.md  2026-03-12-meetmockup-site-design.md
apps/api/: .env  Cargo.toml  Dockerfile  README.md
apps/api/config/: preferred_templates.json
apps/api/k8s/: README.md  deployment.yaml  r2-secret.yaml
apps/api/migrations/: 002_saas_schema.sql
apps/api/scripts/: bootstrap-aws-secrets.sh  bootstrap-github-environment.sh  fetch_printful_templates.py  orchestrate-ecs-service.sh  save-mockup.sh  test-api.sh
apps/api/src/: main.rs
apps/web/: README.md  package.json  pnpm-lock.yaml
apps/web/scripts/: generate_assets.py  playwright-qa.spec.js
apps/web/src/: middleware.ts
assets/templates/hoodie-aop-front-132947/: metadata.json
assets/templates/hoodie-aop-front-132961/: metadata.json
assets/templates/hoodie-aop-front-132989/: metadata.json
assets/templates/hoodie-aop-front-47694/: metadata.json
assets/templates/mug-15oz-front-91020/: metadata.json
assets/templates/mug-15oz-front-91022/: metadata.json
assets/templates/phone-case-front-146439/: metadata.json
assets/templates/phone-case-front-146443/: metadata.json
assets/templates/pillow-front-22665/: metadata.json
assets/templates/pillow-front-22666/: metadata.json
assets/templates/pillow-front-22668/: metadata.json
assets/templates/poster-front-21373/: metadata.json
assets/templates/poster-front-21384/: metadata.json
assets/templates/poster-front-354191/: metadata.json
assets/templates/tank-aop-front-4248/: metadata.json
assets/templates/tote-front-3975/: metadata.json
assets/templates/tshirt-aop-front-3921/: metadata.json
assets/templates/white_male_front/: metadata.json
assets/templates/wrapping-paper-front-196990/: metadata.json
config/: default.toml
docs/: API.md  CONFIGURATION.md  ENGINE.md  LAUNCH_TEMPLATE_MAP.md
docs/plans/: 2026-03-12-meetmockup-site-implementation.md  2026-03-13-demo-wow-factor-design.md  2026-03-13-demo-wow-factor-plan.md  2026-03-13-monorepo-restructure-design.md
ecs/: task-definition.json
k8s/: deployment.yaml
migrations/: 001_initial_schema.sql  003_pod_catalog_schema.sql
scripts/: CODEX-PROMPT-printful-sync.md  compare-ecs-services.sh  generate_assets.py  load-test.sh  render-ecs-task-def.sh  sync-printful-templates.py
src/: main.rs
src/api/: mod.rs  openapi.rs
src/api/handlers/: catalog.rs  generate.rs  health.rs  (+6 more)
src/app/: globals.css
src/config/: mod.rs
src/data/: pricing.ts
src/db/: api_keys.rs  mod.rs  pool.rs  queries.rs  usage.rs
src/domain/: catalog.rs  mod.rs  placement.rs
src/engine/: compositor.rs  displacement.rs  mod.rs  template.rs
src/lib/: demo-data.ts
src/providers/: http_client.rs  mod.rs  traits.rs
src/storage/: mod.rs  r2.rs
src/sync/: asset_sync.rs  mod.rs  orchestrator.rs
(+704 files in other folders)
